Colaboratory를 통해 생성됨

--- a/01_codelab0_colab.ipynb
+++ b/01_codelab0_colab.ipynb
@@ -6,7 +6,6 @@
       "name": "01_codelab0_colab.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOydqXM7pFqT1nz5hX3RFWx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/01_codelab0_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Moonkyusang/2021_PNUAC_AIData/blob/main/01_codelab0_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -136,6 +135,106 @@
         "\n",
         "+ **이동** : 셀을 선택 하고 상단 도구 모음에서 셀 위로 또는 아래 로 셀을 클릭하여 셀을 이동\n",
         " "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yeZkQtDKob-x"
+      },
+      "source": [
+        "#코랩연습 파일"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vAW0ErQdorot"
+      },
+      "source": [
+        "##**텍스트 셀**\n",
+        "+ 두 번 클릭 하영이 셀을 편집\n",
+        "+ 마크 다운 구문을 사용하여 작성\n",
+        "  + 마크 다운은 텍스트 기반의 마크업언어\n",
+        "  +마크 다운 문법 : <https://colab.research.google.com/notebooks/markdown_guide.ipynb>\n",
+        "  +마크 다운 문법 : [문법보기](https://colab.research.google.com/notebooks/markdown_guide.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ea3ZLLkwqji7"
+      },
+      "source": [
+        "#코드 셀"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lw5efabRqt3u",
+        "outputId": "142c601f-26ca-4e32-9fe3-53e29d412687",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('Hello Python')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello Python\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rhx3QlwKqxlb"
+      },
+      "source": [
+        "x=10"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H_F1BnkTqzTC"
+      },
+      "source": [
+        "y=20"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "71IKmqvXq0nh",
+        "outputId": "01ec6b87-255a-462d-e39d-3362bcc7cf75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(f'{x},{y}')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10,20\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
