Colaboratory를 통해 생성됨

--- a/02_python01.ipynb
+++ b/02_python01.ipynb
@@ -29,7 +29,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/02_python01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Moonkyusang/2021_PNUAC_AIData/blob/main/02_python01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -79,7 +79,7 @@
       },
       "source": [
         "'''\n",
-        "작성자 : 김경민\n",
+        "작성자 : 문규상\n",
         "'''\n",
         "\n",
         "print('Hello Python!') #첫번째 출력코드\n",
@@ -323,9 +323,9 @@
       "source": [
         "#정수 입력\n",
         " \n",
-        "\n",
+        "x= int(input())\n",
         "#실수 입력\n",
-        " \n",
+        "   y= float(input())\n",
         "\n",
         "print(x, '=>', type(x))\n",
         "print(y, '=>', type(y))"
@@ -490,21 +490,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2UIKX01cNywh",
-        "outputId": "fe5cbed6-6b44-46f0-a7d5-1b506c49860a"
+        "outputId": "a130fda7-f12c-4198-d153-0cb376e67739"
       },
       "source": [
         "# 정수를 입력받아서 짝수/홀수 구분\n",
         "\n",
         "x = int(input())\n",
+        "\n",
+        "if(x%2==0) :\n",
+        "     print(f'{x}는 짝수')\n",
+        "else :\n",
+        "     print(f'{x}는 홀수')\n",
+        "\n",
         " "
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n",
-            "12는 짝수\n"
+            "36\n",
+            "36는 짝수\n"
           ],
           "name": "stdout"
         }
@@ -513,17 +519,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QpoBs8ucO0hO"
+        "id": "QpoBs8ucO0hO",
+        "outputId": "2b00bc2e-9356-4923-e5b1-0a9b32dc0334",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 성적을 입력받아서 70이상이면 Pass, 70점미만 60점이상 재수강, 60점미만 Fail\n",
         "\n",
         "x = float(input('성적입력 : '))\n",
         "\n",
+        "if x>=70 :\n",
+        "    print(f'{x}는 Pass')\n",
+        "elif x>=60 :\n",
+        "    print(f'{x}는 재시험')\n",
+        "else  :\n",
+        "    print(f'{x}는 fail')\n",
+        "\n",
         " "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "성적입력 : 82\n",
+            "82.0는 Pass\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -573,14 +599,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SCXuAE5YWfCh",
-        "outputId": "bdce1819-306f-4128-bd1b-68fc0f04fa7a"
+        "outputId": "7e81aa5a-9243-4392-b772-9596ef5dabb1"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
         "\n",
-        " "
+        "for i in range(1,51):\n",
+        "    if i% 3==0 and i %4==0 :\n",
+        "        print(i,end=' ')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,13 +626,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2OVQU8sn7Ybb",
-        "outputId": "62e7a448-2fb1-4259-cd84-c8ae04d02a0c"
+        "outputId": "0ea02b32-38b5-42c6-c31c-d18641a7de99"
       },
       "source": [
         "#  while문으로 변경\n",
-        " "
+        "i=0\n",
+        "while i<50 :\n",
+        "    i=i+1\n",
+        "    if i% 3!= 0 or i%4 !=0 : continue\n",
+        "\n",
+        "    print(i,end=' ')"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
