Colaboratory를 통해 생성됨

--- a/03_pandas_01_series.ipynb
+++ b/03_pandas_01_series.ipynb
@@ -100,7 +100,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +544,7 @@
         "print(slt)\n",
         "print(slt2)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,7 @@
         "#slt2 시리즈에서 3월의 값가져오기\n",
         "slt2['3월']"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1040,7 +1040,9 @@
       "source": [
         "print('정렬(값):')\n",
         "#시리즈 값으로 정렬하기\n",
+        "print(sdt1.sort_values())\n",
         "print('정렬(인덱스):')\n",
+        "print(sdt1.sort_index(ascending=False))\n",
         "#시리즈 인덱스로 역순으로 정렬하기"
       ],
       "execution_count": null,
